--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,6 @@
 body {
-    background: url('imagens/fundo.png') repeat;
+    background: #d2d2c1 url('imagens/fundo.png');
+    font: 16px Arial, Helvetica, sans-serif;
 }
 
 .titulo {
