--- a/estilo.css
+++ b/estilo.css
@@ -3,10 +3,10 @@ body {
     font: 16px Arial, Helvetica, sans-serif;
 }
 
-.titulo {
-    font-size: 22px;
+#principal {
+    width: 900px;
 }
 
-.caixa-texto {
-    background: #FAF7E4
+#menu {
+    background: #c5c5b2;
 }
