--- a/estilo.css
+++ b/estilo.css
@@ -9,4 +9,31 @@ body {
 
 #menu {
     background: #c5c5b2;
+    padding: 18px;
+}
+
+#conteudo {
+    background: #e8e8d9;
+    padding: 10px;
+}
+
+#rodape {
+    text-align: center;
+}
+
+/* formatação dos links */
+a {
+    color: #4b566a;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 5px;
+}
+
+h1 {
+    color: #828271;
+    font-size: 1.2em;
+}
+
+.img-campanha {
+    border: 10px solid #c3c3ae;
 }
